--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav li {
     display: inline-block;
     line-height: 70px;
     margin-right: 60px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
@@ -73,6 +74,8 @@ article > section {
     float: left;
     width: 480px;
     padding-left: 30px;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h3 {
